[package]
name = "utp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
num-traits = "0.2.15"
rand = "0.8.5"
tokio = { version = "1.21.1", features = ["io-util", "net", "time", "sync"] }

[dev-dependencies]
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros"] }
